Changes for 1.5:

 - [DEV-56] added better item selection in screens (Artem)
 - [DEV-48] added scripts form,scripts list, script call menu (Artem)
 - [DEV-44] more flexible generation of trigger events (Alexei)
 - [DEV-45] added new design of Status of Triggers (Artem)
 - [DEV-47] added support of selection of events and bulk acknowledge of events (Artem)
 - [DEV-1] added new graph bar (Artem)
 - support of database cache for history and trends (Alexei)
 - basic support of database caching (Alexei)
 - added pie graphs (Artem)
 - added new columns graphs.show_legend, graphs.show_3d (Alexei)
 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [DEV-48] Support of Ping and Traceroute in Status of Triggers screen
 - [DEV-43] support of new macros {ITEM.VALUE}, {ITEM.VALUE1}, etc (Alexei)
 - [ZBX-102] Distributed monitoring: overwriting information (Sasha)
 - [ZBX-30,ZBX-47] better dependencies (Alexei)
 - [ZBX-48] fixed server crash if incorrect syntax of aggregate items is used (Alexei)
 - [ZBX-95] fixed patch.sql to work with buggy PHPMyAdmin (Alexei)
 - [ZBX-59] removed button "Switch Node" (Alexei)
 - [ZBX-19] fixed SMS sending (Sasha)
 - [DEV-46] added "save&return" button in acknowledgement (Artem)
 - [DEV-50] Improved incoming parameters exception validation (Artem)
 - [ZBX-76] Display number of members in host groups (Alexei)
 - [ZBX-92] Distributed monitoring: overwriting new information (Sasha)
 - [DEV-42] Synchronisation of log files (Sasha)
 - [ZBX-90] fixed displaying of last line of a log file in the Latest Data and Overview (Alexei)
 - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)