@@ -473,7 +473,8 @@
 	'S_LATEST_VALUES'=>			'Latest values',
 	'S_NO_PERMISSIONS'=>			'No permissions !',
 	'S_LATEST_DATA_BIG'=>			'LATEST DATA',
-	'S_ALL_SMALL'=>				'all',
+	'S_ALL_SMALL'=>					'all',
+	'S_ALL_BIG'=>					'ALL',
 	'S_MINUS_ALL_MINUS'=>			'- all -',
 	'S_MINUS_OTHER_MINUS'=>			'- other -',
 	'S_DESCRIPTION_LARGE'=>			'DESCRIPTION',
@@ -635,7 +636,10 @@
 	'S_DELETED'=>				'Deleted',
 	'S_UNKNOWN'=>				'Unknown',
 	'S_GROUPS'=>				'Groups',
+	'S_MINUS_ALL_GROUPS_MINUS'=>	' - all groups - ',
 	'S_NO_GROUPS_DEFINED'=>			'No groups defined',
+	'S_FOR_GROUP_SMALL'=>		'for group',
+	'S_FOR_NODE_SMALL'=>		'for node',
 	'S_NEW_GROUP'=>				'New group',
 	'S_DNS_NAME'=>				'DNS name',
 	'S_IP_ADDRESS'=>			'IP address',
